--- a/video-service/src/main/resources/application.yml
+++ b/video-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
   datasource:
     url: jdbc:postgresql://localhost/video_service
     username:
