Bugfix - no recommendation for video now loads video instead of error message

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: USER-SERVICE
+  jpa:
+    database: postgresql
+    hibernate:
+      ddl-auto: create-drop
+  datasource:
+    url: jdbc:postgresql://localhost/videocity_user_service
+
 
 eureka:
   client:
