--- a/sharing-service/src/main/resources/application.yml
+++ b/sharing-service/src/main/resources/application.yml
@@ -2,17 +2,23 @@ server:
   port: 8081
 
 spring:
+  profiles:
+    active: development
   application:
     name: RECOMMENDATION-SERVICE
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
+    generate-ddl: true
   datasource:
-    url: jdbc:postgresql://localhost/video_sharing_service
-    username:
-    password:
+    url: jdbc:postgresql://localhost/videocity_recommendation_service
+    username: postgres
+    password: postgres
     driver-class-name: org.postgresql.Driver
+
 eureka:
   client:
     fetch-registry: true
