--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -2,15 +2,22 @@ server:
   port: 8082
 
 spring:
+  profiles:
+    active: development
   application:
     name: USER-SERVICE
   jpa:
     database: postgresql
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
+    generate-ddl: true
   datasource:
     url: jdbc:postgresql://localhost/videocity_user_service
-
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
 
 eureka:
   client:
