Authentication service - user is authenticated on login

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
               - PUT
               - DELETE
       routes:
+        - id: AUTHENTICATION-SERVICE
+          uri: lb://AUTHENTICATION-SERVICE
+          predicates:
+            - Path=/auth/**
         - id: VIDEO-SERVICE
           uri: lb://VIDEO-SERVICE
           predicates:
