--- a/authentication-service/src/main/resources/application.yml
+++ b/authentication-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     jwt:
       secretKey: D5UmXKGUpmTmNTYsdkgKW1GVrHoHEHNC
       tokenPrefix: Bearer
-      expirationDays: 14
+      expirationDate: 14
 
 eureka:
   client:
